--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1482,6 +1482,10 @@ footer img {
   }
 }
 @media (max-width: 430px) {
+  .socialIconContainer {
+    width: 0;
+    margin-right: 75px;
+  }
   .tagline {
     padding: 0 10px;
   }
